--- a/app/assets/stylesheets/chores.css.scss
+++ b/app/assets/stylesheets/chores.css.scss
@@ -71,4 +71,6 @@ html, body
    border-radius: 2px 2px 10px 10px; // apply 10px to the bottom corners of the infowindow
 }
 */
-
+.info{
+   font-weight: bold;
+}
