--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,15 @@
 	left: 15%;
 	color: blue;
 }
+
+.colorf{
+    background-color:#f8f8f8;
+    font-size: 15px;
+}
+
+.coloro{
+    background-color: #ff9700;
+    font-size: 15px;
+    color: white;
+}
+
