--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -6,7 +6,7 @@
 <body>
 	<div class="container" style="padding-top:50px;">
 	<div class="panel panel-default">
-	<div class="panel-heading">
+	<div id='clientnav'class="panel-heading">
 		<h3>Hello, <%= @client.name %>!</h3>
 		<h5>Client Profile</h5>
 	</div>
