--- a/app/assets/stylesheets/landing-page.css.scss
+++ b/app/assets/stylesheets/landing-page.css.scss
@@ -27,12 +27,13 @@ h6 {
 }
 
 .lead {
-    font-size: 18px;
+  /*  font-size: 18px;*/
     font-weight: 400;
+    color: #828a8b;
 }
 
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-top: 50px; 
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
@@ -43,7 +44,9 @@ h6 {
 }
 
 #slogan{
-    font-size: 50px;
+    font-size: 80px;
+    word-spacing: 10px;
+    letter-spacing: 2px;
 }
 .intro-message {
     position: relative;
@@ -131,7 +134,7 @@ h6 {
     padding: 100px 0;
     color: #f8f8f8;
     /*/assets/images route is implicit*/
-    background-image: url('laundry.jpg');
+    background-image: url('paintingdark.jpg');
     background-image: center;
     background-size: cover;
 }
@@ -181,6 +184,42 @@ footer {
     background-color: #f8f8f8;
 }
 
+
+
 p.copyright {
     margin: 15px 0 0;
 }
+
+
+.carousel {
+    height: 50%;
+}
+
+.item,
+.active,
+.carousel-inner {
+    height: 100%;
+}
+
+.design{
+    width: 100%;
+    height: 100%;
+   text-align: center;
+    color: #f8f8f8;
+    background-image: url('packingdark.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
+}
+
+.fill1 {
+    background-image: url('packingdark.jpg');
+}
+.fill2 {
+    background-image: url('paintingdark.jpg');
+
+}
+.fill3 {
+    background-image: url('dishesdark2.jpg');
+}
+
